deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __APP_NAME__-app
  namespace: __APP_NAMESPACE__-apps
  labels:
    app: __APP_NAME__
spec:
  minReadySeconds: 30
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: __APP_NAME__
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: __APP_NAME__
    spec:
      containers:
        - image: __DEPLOY_IMAGE__
          ports:
          - containerPort: __APP_INTERNAL_PORT__
          volumeMounts:
            - name: app-config
              mountPath: "/app/config"
              readOnly: true
          imagePullPolicy: Always
          name: __APP_NAME__
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: __APP_INTERNAL_PORT__
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 3
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: __APP_INTERNAL_PORT__
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: app-config
          secret:
            secretName: __APP_NAME__-secret
