deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__-service
  namespace: __APP_NAMESPACE__-apps
  labels:
    app: __APP_NAME__
spec:
  type: NodePort
  selector:
    app: __APP_NAME__
  ports:
    - port: __APP_PORT__
      targetPort: __APP_INTERNAL_PORT__
